--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-static": "^1.2.6",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "web-push": "^3.4.4"
   },
   "scripts": {
     "start": "node server"
